# api/models/radio_station.py
@@ -8,8 +8,6 @@ from typing import List, Dict  # noqa: F401
 from api.models.base_model_ import Model
 from api import util
 
-from api.models.now_playing import NowPlaying
-
 
 class RadioStation(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
@@ -17,7 +15,7 @@ class RadioStation(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, name: str=None, favicon: str=None, country_code: str=None, now_playing: NowPlaying=None):  # noqa: E501
+    def __init__(self, id: str=None, name: str=None, favicon: str=None, country_code: str=None):  # noqa: E501
         """RadioStation - a model defined in Swagger
 
         :param id: The id of this RadioStation.  # noqa: E501
@@ -28,30 +26,25 @@ class RadioStation(Model):
         :type favicon: str
         :param country_code: The country_code of this RadioStation.  # noqa: E501
         :type country_code: str
-        :param now_playing: The now_playing of this RadioStation.  # noqa: E501
-        :type now_playing: NowPlaying
         """
         self.swagger_types = {
             'id': str,
             'name': str,
             'favicon': str,
-            'country_code': str,
-            'now_playing': NowPlaying
+            'country_code': str
         }
 
         self.attribute_map = {
             'id': 'id',
             'name': 'name',
             'favicon': 'favicon',
-            'country_code': 'country_code',
-            'now_playing': 'now_playing'
+            'country_code': 'country_code'
         }
 
         self._id = id
         self._name = name
         self._favicon = favicon
         self._country_code = country_code
-        self._now_playing = now_playing
 
     @classmethod
     def from_dict(cls, dikt) -> 'RadioStation':
@@ -153,26 +146,3 @@ class RadioStation(Model):
             raise ValueError("Invalid value for `country_code`, must not be `None`")  # noqa: E501
 
         self._country_code = country_code
-
-    @property
-    def now_playing(self) -> NowPlaying:
-        """Gets the now_playing of this RadioStation.
-
-
-        :return: The now_playing of this RadioStation.
-        :rtype: NowPlaying
-        """
-        return self._now_playing
-
-    @now_playing.setter
-    def now_playing(self, now_playing: NowPlaying):
-        """Sets the now_playing of this RadioStation.
-
-
-        :param now_playing: The now_playing of this RadioStation.
-        :type now_playing: NowPlaying
-        """
-        if now_playing is None:
-            raise ValueError("Invalid value for `now_playing`, must not be `None`")  # noqa: E501
-
-        self._now_playing = now_playing
